--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rivet-react-nwb",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "rivet-react-nwb React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -26,6 +26,9 @@
     "nwb": "0.21.x",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
+  },
+  "publishConfig": {
+    "registry": "https://apps.iu.edu/nxs-prd/content/repositories/IUPublic-NPM"
   },
   "author": "",
   "homepage": "",
