--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "classnames": "2.2.5"
+  },
   "peerDependencies": {
     "react": "16.x"
   },
