updates rvt class names

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rivet-react-nwb",
+  "name": "rivet-react",
   "version": "0.1.4",
   "description": "rivet-react-nwb React component",
   "main": "lib/index.js",
