--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   },
   "devDependencies": {
     "nwb": "0.21.x",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react": "16.3.1",
+    "react-dom": "16.3.1",
+    "rivet-uits": "1.0.0"
   },
   "publishConfig": {
     "registry": "https://apps.iu.edu/nxs-prd/content/repositories/IUPublic-NPM"
