--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "nwb": "0.21.x",
     "react": "16.3.1",
     "react-dom": "16.3.1",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
     "rivet-uits": "1.0.0"
   },
   "publishConfig": {
