--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rivet-react",
-  "version": "0.2.1",
-  "description": "rivet-react-nwb React component",
+  "version": "0.2.2",
+  "description": "Rivet React components",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
