--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "nwb": "0.21.x",
     "react": "16.3.1",
+    "react-axe": "^3.0.1",
     "react-dom": "16.3.1",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
