Fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-rivet",
+  "name": "rivet-react",
   "version": "0.2.5",
   "description": "Rivet React components",
   "author": "",
