--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.2.5",
   "description": "Rivet React components",
   "author": "",
-  "homepage": "https://github.com/indiana-university/rivet-react",
   "license": "MIT",
-  "repository": "",
+  "repository": "https://github.com/indiana-university/rivet-react",
   "keywords": [
     "react-component"
   ],
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "dependencies": {
     "classnames": "^2.2.6",
     "jest-cli": "^23.1.0",
@@ -21,6 +22,7 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
+    "build-lib": "rm -rf ./lib && tsc",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
@@ -36,5 +38,8 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "typescript": "^2.9.2"
-  }
+  },
+  "files": [
+    "lib"
+  ]
 }
