Restore original project hierarchy. Restore demo.
* The components have all been moved back to /src/components.
* The demo page was moved to /src.
In `package.json`:
  + the script `yarn build` consumes `tsconfig.json` and builds the demo app to /build
  + the script `yarn build-dist` consumes `tsconfig.dist.json` and transpiles the /src/components folder to /build/dist/components.
  + the `files` property has been updated to package `/build/dist/components`

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "build-lib": "rm -rf ./lib && tsc",
+    "build-dist": "rm -rf ./build/dist && tsc -p tsconfig.dist.json",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
@@ -40,6 +40,6 @@
     "typescript": "^2.9.2"
   },
   "files": [
-    "lib"
+    "build/dist/components"
   ]
 }
