--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "lib",
+    "baseUrl": "./public",
+    "outDir": "build/dist",
     "module": "commonjs",
     "target": "es5",
     "lib": ["es5","es6", "dom"],
