--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,27 @@ npm-debug.log*
 /.idea
 .npmrc
 .vscode
+
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+/ts_conversion
+
+# production
+/build
+/package
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
