--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 sudo: false
-
 language: node_js
 node_js:
   - 8
-
 before_install:
-  - npm install codecov.io coveralls
-
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH="$HOME/.yarn/bin:$PATH"
+  - yarn install
+  - yarn install codecov.io coveralls
+script:
+  - yarn build
+  - yarn test --coverage
 after_success:
   - cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
-
-branches:
-  only:
-    - master
