--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,14 @@ sudo: false
 language: node_js
 node_js:
   - 8
+cache:
+  directories:
+    - node_modules
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH="$HOME/.yarn/bin:$PATH"
   - yarn install
-  - yarn install codecov.io coveralls
+  - yarn add codecov.io coveralls
 script:
   - yarn build
   - yarn test --coverage
