Exclude 'index.ts' files from code coverage.

--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
   },
   "files": [
     "build/dist/components"
-  ]
+  ],
+  "jest": {
+    "collectCoverageFrom": ["src/**/*.{js,jsx,ts,tsx}", "!src/**/index.ts"]
+  }
 }
