--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,9 @@ before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH="$HOME/.yarn/bin:$PATH"
   - yarn install
-  - yarn add codecov.io coveralls
+  - yarn add codecov.io
 script:
   - yarn build
   - yarn test --coverage
 after_success:
   - cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
-  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
