Implement ordered/unordered lists. (#11)
* Implement ordered and unordered lists.
* Exclude index.tsx from coverage.
* Only gather code coverage from `/src/components`.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "build/dist/components"
   ],
   "jest": {
-    "collectCoverageFrom": ["src/**/*.{js,jsx,ts,tsx}", "!src/**/index.ts"]
+    "collectCoverageFrom": ["src/components/**/*.{js,jsx,ts,tsx}", "!src/components/**/index.{ts,tsx}"]
   }
 }
