--- a/package.json
+++ b/package.json
@@ -2,42 +2,47 @@
   "name": "rivet-react",
   "version": "0.2.5",
   "description": "Rivet React components",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "files": [
-    "css",
-    "es",
-    "lib",
-    "umd"
-  ],
-  "scripts": {
-    "build": "nwb build-react-component",
-    "clean": "nwb clean-module && nwb clean-demo",
-    "start": "nwb serve-react-demo",
-    "test": "nwb test-react",
-    "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server"
-  },
-  "dependencies": {
-    "classnames": "2.2.5"
-  },
-  "peerDependencies": {
-    "react": "16.x"
-  },
-  "devDependencies": {
-    "nwb": "0.21.x",
-    "react": "16.3.1",
-    "react-axe": "^3.0.1",
-    "react-dom": "16.3.1",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
-    "rivet-uits": "1.0.0"
-  },
   "author": "",
-  "homepage": "",
   "license": "MIT",
-  "repository": "",
+  "repository": "https://github.com/indiana-university/rivet-react",
   "keywords": [
     "react-component"
-  ]
+  ],
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "jest-cli": "^23.1.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "2.16.0",
+    "rivet-uits": "^1.0.0"
+  },
+  "scripts": {
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "build-dist": "rm -rf ./build/dist && tsc -p tsconfig.dist.json",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.4",
+    "@types/enzyme": "^3.1.10",
+    "@types/enzyme-adapter-react-16": "^1.0.2",
+    "@types/jest": "^23.1.1",
+    "@types/node": "^10.3.4",
+    "@types/react": "^16.4.1",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-router-dom": "^4.2.7",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "typescript": "^2.9.2"
+  },
+  "files": [
+    "build/dist/components"
+  ],
+  "jest": {
+    "collectCoverageFrom": ["src/components/**/*.{js,jsx,ts,tsx}", "!src/components/**/index.{ts,tsx}"]
+  }
 }
