--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ script:
 after_success:
   - cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
 notifications:
-  slack: '$SLACK_TOKEN'
+  slack: 
+    rooms:
+      - $SLACK_TOKEN
     on_success: change
     on_failure: always
