--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ notifications:
   slack: 
     rooms:
       - $SLACK_TOKEN
-    on_success: change
+    on_success: always
     on_failure: always
