--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,9 @@ script:
 after_success:
   - cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
 notifications:
-  slack: '$SLACK_TOKEN#rivet-react'
+  slack:
+    rooms:
+      - $ES_SLACK
+      - $ITCO_SLACK
+  email:
+    - jhoerr@iu.edu
