Add the NPM package-lock.json file to git ignore

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "build/dist/components"
   ],
   "jest": {
-    "collectCoverageFrom": ["src/components/**/*.{js,jsx,ts,tsx}", "!src/components/**/index.{ts,tsx}"]
+    "collectCoverageFrom": [
+      "src/components/**/*.{js,jsx,ts,tsx}",
+      "!src/components/**/index.{ts,tsx}"
+    ]
   }
 }
