--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ npm-debug.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# This project uses Yarn mostly so ignore the regular NPM lock file
+package-lock.json
