--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ notifications:
     on_success: change # default: change
     on_failure: change # default: always
 deploy:
-  provider: script
-  script: yarn run deploy
-  api_key: $GITHUB_TOKEN
-  skip_cleanup: true
+  provider: pages
+  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  skip-cleanup: true
+  keep-history: true
   on:
     branch: feature/docs
