--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ yarn-error.log*
 
 # This project uses Yarn mostly so ignore the regular NPM lock file
 package-lock.json
+
+# Ignore Visual Studio Code config files
+*.code-workspace
