deploy contents of build folder only

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ notifications:
 deploy:
   provider: pages
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  local-dir: build
   skip-cleanup: true
   keep-history: true
   on:
