--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_deploy:
 deploy:
   provider: pages
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-  local-dir: build
+  local-dir: styleguide
   skip-cleanup: true
   on:
     branch: feature/style-guide
