--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "build-dist": "rm -rf ./build/dist && tsc -p tsconfig.dist.json",
+    "build": "rm -rf ./build/dist && tsc -p tsconfig.dist.json",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
