--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "rivet-uits": "^1.0.0"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "build-dist": "rm -rf ./build/dist && tsc -p tsconfig.dist.json",
+    "start": "npx styleguidist server",
+    "build": "rm -rf ./build/dist && tsc -p tsconfig.dist.json",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
