--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.2.6",
     "jest-cli": "^23.1.0",
     "react": "^16.4.1",
+    "react-display-name": "^0.2.4",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
