--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "keywords": [
     "react-component"
   ],
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "build/dist/components/index.js",
+  "types": "build/dist/components/index.d.ts",
   "dependencies": {
     "classnames": "^2.2.6",
     "jest-cli": "^23.1.0",
