Add step to post code coverage info

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,6 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/node:8
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
 
     working_directory: ~/repo
 
@@ -37,5 +32,9 @@ jobs:
       - run: yarn build
 
       # run tests!
-      - run: yarn test -w 1
+      - run: yarn test -w 1 --coverage
+
+      # update code coverage
+      - run: cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
+  
 
