--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
     "@types/react-router-dom": "^4.2.7",
+    "codecov.io": "^0.1.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "react-docgen-typescript": "1.6.2",
