--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,37 +4,59 @@
 #
 version: 2
 jobs:
-  build:
+  build_test:
     docker:
       # specify the version you desire here
       - image: circleci/node:8
-
     working_directory: ~/repo
-
     steps:
       - checkout 
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
       - run: yarn install
-
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      
-      # build
-      - run: yarn build
-
-      # run tests!
-      - run: yarn test -w 1 --coverage
-
-      # update code coverage
-      - run: cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
-  
-
+      - run: 
+          command: |
+            yarn build
+            yarn test -w 1 --coverage
+            cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
+  publish_guide:
+    filters: 
+      branches:
+        only:
+          - master
+          - feature/circleci
+    docker:
+      - image: circleci/node:8
+    working_directory: ~/repo
+    steps:
+      - checkout 
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+      - run:
+          name: publish gh-pages
+          command: |
+            npx styleguidist build
+            git config --global credential.helper store
+            echo 'https://$($GITHUB_ACCESS_TOKEN):x-oauth-basic@github.com`n' >> $HOME/.git-credentials
+            git config --global user.email "jhoerr@gmail.com"
+            git config --global user.name "John Hoerr"            
+            git subtree push --prefix styleguide origin gh-pages --force
+workflows:
+  version: 2
+  build-test-and-publish:
+    jobs:
+      - build_test
+      - publish_guide:
+          requires:
+            - build_test
+          context: rivet-react
