--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,11 +21,11 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      - run: 
-          command: |
-            yarn build
-            yarn test -w 1 --coverage
-            cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
+      # - run: 
+      #    command: |
+      #      yarn build
+      #      yarn test -w 1 --coverage
+      #      cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
   publish_guide:
     filters: 
       branches:
@@ -51,7 +51,7 @@ jobs:
             echo 'https://$($GITHUB_ACCESS_TOKEN):x-oauth-basic@github.com`n' >> $HOME/.git-credentials
             git config --global user.email "jhoerr@gmail.com"
             git config --global user.name "John Hoerr"            
-            git push origin `git subtree split --prefix styleguide_pub gh-pages`:gh-pages --force
+            git push origin `git subtree split --prefix styleguide_pub master`:gh-pages --force
 
 workflows:
   version: 2
