Delete existing gh-pages branch prior to push

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,8 @@ jobs:
             echo 'https://$($GITHUB_ACCESS_TOKEN):x-oauth-basic@github.com`n' >> $HOME/.git-credentials
             git config --global user.email "jhoerr@gmail.com"
             git config --global user.name "John Hoerr"            
-            git push origin `git subtree split --prefix styleguide_pub master`:gh-pages --force
-
+            git push origin --delete gh-pages
+            git subtree push --prefix styleguide_pub origin gh-pages
 workflows:
   version: 2
   build-test-and-publish:
