--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,15 +45,15 @@ jobs:
       - run:
           name: publish gh-pages
           command: |
-            echo "$GITHUB_ACCESS_TOKEN"
-            npx styleguidist build
-            mv styleguide styleguide_pub
-            git config --global credential.helper store
-            echo 'https://$($GITHUB_ACCESS_TOKEN):x-oauth-basic@github.com`n' >> $HOME/.git-credentials
-            git config --global user.email "jhoerr@gmail.com"
-            git config --global user.name "John Hoerr"            
-            git push origin --delete gh-pages
-            git subtree push --prefix styleguide_pub origin gh-pages
+            echo "-->${GITHUB_ACCESS_TOKEN}<--"
+            #npx styleguidist build
+            #mv styleguide styleguide_pub
+            #git config --global credential.helper store
+            #echo 'https://$($GITHUB_ACCESS_TOKEN):x-oauth-basic@github.com`n' >> $HOME/.git-credentials
+            #git config --global user.email "jhoerr@gmail.com"
+            #git config --global user.name "John Hoerr"            
+            #git push origin --delete gh-pages
+            #git subtree push --prefix styleguide_pub origin gh-pages
 workflows:
   version: 2
   build-test-and-publish:
