--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,8 +45,9 @@ jobs:
       - run:
           name: publish gh-pages
           command: |
-            npx styleguidist build
-            yarn deploy
+            git config --global user.email "jhoerr@gmail.com"
+            git config --global user.name "John Hoerr"
+            yarn publish-guide
 workflows:
   version: 2
   build-test-and-publish:
