--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,11 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      # - run: 
-      #    command: |
-      #      yarn build
-      #      yarn test -w 1 --coverage
-      #      cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
+      - run: 
+         command: |
+           yarn build
+           yarn test -w 1 --coverage
+           cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
   publish_guide:
     branches:
       only:
