--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,7 @@
 version: 2
 jobs:
   build_test:
-    # branches:
-    #  ignore:
-    #    - gh-pages
     docker:
-      # specify the version you desire here
       - image: circleci/node:8
     working_directory: ~/repo
     steps:
@@ -30,10 +26,6 @@ jobs:
            yarn test -w 1 --coverage
            cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
   publish_guide:
-    branches:
-      only:
-        - master
-        - feature/circleci
     docker:
       - image: circleci/node:8
     working_directory: ~/repo
@@ -56,7 +48,16 @@ workflows:
   version: 2
   build-test-and-publish:
     jobs:
-      - build_test
+      - build_test:
+          filters:
+            branches:
+              ignore:
+                - gh-pages
       - publish_guide:
           requires:
             - build_test
+          filters:
+            branches:
+              only:
+                - master
+                - feature/circleci
