Publish gh-pages on develop builds (for now)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ aliases:
     branches:
       only:
         - master
+        - develop
   - &filter-ignore-gh-pages
     branches:
       ignore: gh-pages
