--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-docgen-typescript": "1.7.0",
     "react-scripts-ts": "2.17.0",
     "react-styleguidist": "7.2.5",
+    "semantic-release": "15.9.12",
     "typescript": "2.9.2"
   },
   "files": [
