--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "classnames": "2.2.6",
     "react": "16.4.1",
     "react-display-name": "0.2.4",
-    "react-dom": "16.4.1",
-    "rivet-uits": "1.0.0"
+    "react-dom": "16.4.1"
   },
   "devDependencies": {
     "@types/classnames": "2.2.6",
@@ -41,6 +40,7 @@
     "react-docgen-typescript": "1.7.0",
     "react-scripts-ts": "2.17.0",
     "react-styleguidist": "7.2.5",
+    "rivet-uits": "1.0.0",
     "semantic-release": "15.9.12",
     "typescript": "2.9.2"
   },
