--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-docgen-typescript": "1.7.0",
     "react-scripts-ts": "2.17.0",
     "react-styleguidist": "7.2.5",
+    "rivet-collapsible": "0.1.1-alpha",
     "rivet-switch": "0.1.1-alpha",
     "rivet-uits": "1.0.0",
     "semantic-release": "15.9.12",
