--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "rivet-uits": "1.1.0",
     "semantic-release": "15.9.12",
     "typescript": "2.9.2",
-    "webpack": "^3.8.1"
+    "webpack": "3.8.1"
   },
   "files": [
     "build/dist/components",
