--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rivet-react",
-  "version": "0.7.1",
+  "version": "0.7.5",
   "description": "Rivet React components",
   "author": "",
   "license": "BSD-3-Clause",
@@ -41,9 +41,9 @@
     "react-docgen-typescript": "1.12.3",
     "react-scripts-ts": "2.17.0",
     "react-styleguidist": "7.2.5",
-    "rivet-collapsible": "0.1.1-alpha",
-    "rivet-switch": "0.1.1-alpha",
-    "rivet-uits": "1.1.0",
+    "rivet-collapsible": "0.2.10",
+    "rivet-switch": "0.3.1",
+    "rivet-uits": "1.6.0",
     "semantic-release": "15.9.12",
     "typescript": "2.9.2",
     "webpack": "3.8.1"
