--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "license": "license-check-and-add",
     "publish-guide": "npx styleguidist build && cp -r .circleci styleguide && gh-pages --dist styleguide --dotfiles",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "dependencies": {
     "classnames": "2.2.6",
@@ -29,6 +31,7 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.4.0",
     "@testing-library/user-event": "7.2.1",
+    "acorn": "^6.4.0",
     "codecov.io": "0.1.6",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
