--- a/package.json
+++ b/package.json
@@ -12,41 +12,44 @@
   "main": "build/dist/components/index.js",
   "types": "build/dist/components/index.d.ts",
   "scripts": {
-    "start": "npx styleguidist server",
-    "build": "rm -rf ./build/dist && tsc -p tsconfig.dist.json",
-    "license": "license-check-and-add",
-    "publish-guide": "npx styleguidist build && cp -r .circleci styleguide && gh-pages --dist styleguide --dotfiles",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "classnames": "2.2.6",
-    "react": "16.4.2",
-    "react-display-name": "0.2.4",
-    "react-dom": "16.4.2"
+    "react": "16.12.0",
+    "react-display-name": "0.2.5",
+    "react-dom": "16.12.0"
   },
   "devDependencies": {
-    "@types/classnames": "2.2.7",
-    "@types/enzyme": "3.1.16",
-    "@types/enzyme-adapter-react-16": "1.0.3",
-    "@types/jest": "23.3.13",
-    "@types/node": "10.12.19",
-    "@types/react": "16.4.1",
-    "@types/react-dom": "16.0.6",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.4.0",
+    "@testing-library/user-event": "8.0.2",
+    "@types/classnames": "2.2.9",
+    "@types/enzyme": "3.10.4",
+    "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/jest": "24.0.25",
+    "@types/node": "13.1.2",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
     "codecov.io": "0.1.6",
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.1",
-    "gh-pages": "2.0.1",
-    "license-check-and-add": "2.3.6",
-    "react-docgen-typescript": "1.12.3",
-    "react-scripts-ts": "2.17.0",
-    "react-styleguidist": "7.2.5",
-    "rivet-collapsible": "0.2.10",
-    "rivet-switch": "0.3.1",
-    "rivet-uits": "1.6.0",
-    "semantic-release": "15.9.12",
-    "typescript": "2.9.2",
-    "webpack": "3.8.1"
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
+    "gh-pages": "2.1.1",
+    "license-check-and-add": "3.0.3",
+    "react-docgen-typescript": "1.16.1",
+    "react-scripts": "3.3.0",
+    "react-styleguidist": "10.3.2",
+    "rivet-collapsible": "0.2.11",
+    "rivet-switch": "0.3.2",
+    "rivet-uits": "1.7.2",
+    "semantic-release": "15.14.0",
+    "typescript": "3.7.4"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "files": [
     "build/dist/components",
@@ -75,5 +78,17 @@
       ".tsx"
     ],
     "insert_license": true
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
