--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "lint": "env EXTEND_ESLINT=true eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "classnames": "2.2.6",
@@ -44,9 +46,6 @@
     "rivet-switch": "0.3.2",
     "rivet-uits": "1.7.2",
     "semantic-release": "15.14.0"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "files": [
     "build/dist/components",
