--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.4.0",
     "@testing-library/user-event": "8.0.2",
-    "acorn": "^7.1.0",
+    "acorn": "7.1.0",
     "codecov.io": "0.1.6",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
