--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@testing-library/react": "9.4.0",
     "@testing-library/user-event": "8.0.2",
     "acorn": "7.1.0",
-    "codecov.io": "0.1.6",
+    "codecov": "3.6.2",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "gh-pages": "2.1.1",
