#210 Fix coverage report
Co-Authored-By: Weldon Sams <wsams@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
   ],
   "jest": {
     "collectCoverageFrom": [
-      "src/components/**/*.{js}",
-      "!src/components/**/index.{js}"
+      "src/components/**/*.js",
+      "!src/components/**/index.js"
     ]
   },
   "browserslist": {
