--- a/package.json
+++ b/package.json
@@ -13,39 +13,40 @@
   "types": "build/dist/components/index.d.ts",
   "scripts": {
     "start": "npx styleguidist server",
-    "build": "rm -rf ./build/dist && tsc -p tsconfig.dist.json",
+    "build": "react-scripts build",
     "license": "license-check-and-add",
     "publish-guide": "npx styleguidist build && cp -r .circleci styleguide && gh-pages --dist styleguide --dotfiles",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "watch": "react-scripts start",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "classnames": "2.2.6",
     "react": "16.4.2",
     "react-display-name": "0.2.4",
-    "react-dom": "16.4.2"
+    "react-dom": "16.4.2",
+    "react-scripts": "^3.3.1"
   },
   "devDependencies": {
     "@types/classnames": "2.2.7",
     "@types/enzyme": "3.1.16",
     "@types/enzyme-adapter-react-16": "1.0.3",
-    "@types/jest": "23.3.13",
-    "@types/node": "10.12.19",
-    "@types/react": "16.4.1",
-    "@types/react-dom": "16.0.6",
+    "@types/jest": "^23.3.13",
+    "@types/node": "^10.12.19",
+    "@types/react": "^16.4.1",
+    "@types/react-dom": "^16.0.6",
     "codecov.io": "0.1.6",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "gh-pages": "2.0.1",
     "license-check-and-add": "2.3.6",
     "react-docgen-typescript": "1.12.3",
-    "react-scripts-ts": "2.17.0",
     "react-styleguidist": "7.2.5",
     "rivet-collapsible": "0.2.10",
     "rivet-switch": "0.3.1",
     "rivet-uits": "1.6.0",
     "semantic-release": "15.9.12",
-    "typescript": "2.9.2",
+    "typescript": "^2.9.2",
     "webpack": "3.8.1"
   },
   "files": [
