--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "rivet-uits": "1.6.0",
     "semantic-release": "15.9.12",
     "typescript": "^2.9.2",
-    "webpack": "3.8.1"
+    "webpack": "^4.41.5"
   },
   "files": [
     "build/dist/components",
