Restore previous source includes/excludes.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,20 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "build",
+    "scripts",
+    "acceptance-tests",
+    "webpack",
+    "jest",
+    "src/setupTests.ts",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "config",
+    "dist"
   ]
 }
