--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "noImplicitAny": false,    
-    "jsx": "react"
+    "jsx": "react",
+
+    "rootDir": "src",
+    "outDir": "build/dist",
+    "sourceMap": true,
   },
   "include": [
     "src/**/*"
