--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@types/prop-types": "^15.7.3",
     "classnames": "2.2.6",
-    "react": "16.4.2",
-    "react-display-name": "0.2.4",
-    "react-dom": "16.4.2",
+    "react": "16.12.0",
+    "react-display-name": "0.2.5",
+    "react-dom": "16.12.0",
     "react-scripts": "^3.3.1"
   },
   "devDependencies": {
     "@types/classnames": "2.2.7",
-    "@types/enzyme": "3.1.16",
-    "@types/enzyme-adapter-react-16": "1.0.3",
+    "@types/enzyme": "3.10.4",
+    "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.19",
-    "@types/react": "^16.4.1",
-    "@types/react-dom": "^16.0.6",
+    "@types/prop-types": "15.7.3",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
     "codecov.io": "0.1.6",
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.1",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
     "gh-pages": "2.0.1",
     "license-check-and-add": "2.3.6",
     "react-docgen-typescript": "1.12.3",
