--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "classnames": "2.2.6",
     "react": "16.12.0",
     "react-display-name": "0.2.5",
-    "react-dom": "16.12.0",
     "react-scripts": "^3.3.1"
   },
   "devDependencies": {
@@ -42,6 +41,7 @@
     "gh-pages": "2.0.1",
     "license-check-and-add": "2.3.6",
     "react-docgen-typescript": "1.12.3",
+    "react-dom": "^16.12.0",
     "react-styleguidist": "7.2.5",
     "rivet-collapsible": "0.2.10",
     "rivet-switch": "0.3.1",
