--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "license-check-and-add": "3.0.4",
     "react-docgen-typescript": "1.16.2",
     "react-dom": "16.12.0",
-    "react-scripts": "^3.3.1",
+    "react-scripts": "3.3.1",
     "react-styleguidist": "10.6.1",
     "rivet-collapsible": "0.2.11",
     "rivet-switch": "0.3.2",
